# clerk-sdk-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: test.yml
clerk/: client.py  clients.py  errors.py  organizations.py  sessions.py  types.py  users.py  verification.py
tests/: conftest.py  test_client.py  test_clients.py  test_sessions.py  test_users.py  test_verification.py
