[tool.poetry]
name = "clerk-sdk-python"
version = "0.1.0"
description = "Python SDK for clerk.dev"
repository = "https://github.com/tizz98/clerk-sdk-python"
homepage = "https://clerk.dev"
keywords = ["clerk", "authentication", "clerk.dev"]
authors = ["Elijah Wilson <dev.tizz98@gmail.com>"]
packages = [
    { include = "clerk" },
]
include = [
    "LICENSE",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "3.9.0"
pydantic = "^1.10.13"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
black = "^20.8b1"
tox = "^3.28.0"
isort = "^5.12.0"
pytest-httpserver = "^0.3.8"
pytest-asyncio = "^0.14.0"
pytest-spec = "^3.2.0"
pytest-cov = "^2.12.1"
Faker = "^6.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
profile = "black"

[tool.black]
line-length = 100
target-version = ['py38']  # todo py39
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
