[tool.poetry]
name = "clerk-sdk-python"
version = "0.2.0"
description = "Python SDK for clerk.dev"
repository = "https://github.com/CyrusOfEden/clerk-sdk-python"
homepage = "https://clerk.dev"
keywords = ["clerk", "authentication", "clerk.dev"]
authors = [
  "Elijah Wilson <dev.tizz98@gmail.com>",
  "Cyrus Nouroozi <cyrus@edendaolab.com>"
]
packages = [{ include = "clerk" }]
include = ["LICENSE"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = { extras = ["speedups"], version = "^3.9.0" }
pydantic = "^2.5"

[tool.poetry.group.dev.dependencies]
black = "^20"
Faker = "^21"
isort = "^5.12.0"
pluggy = "^1.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1"
pytest-httpserver = "^1.0"
pytest-spec = "^3.2.0"
tox = "^3.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
profile = "black"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
