[tool.poetry]
name = "clerk-sdk-python"
version = "0.1.0"
description = "Python SDK for clerk.dev"
repository = "https://github.com/tizz98/clerk-sdk-python"
homepage = "https://clerk.dev"
keywords = ["clerk", "authentication", "clerk.dev"]
authors = ["Elijah Wilson <dev.tizz98@gmail.com>"]
packages = [
    { include = "clerk" },
]
include = [
    "LICENSE",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = {extras = ["speedups"], version = "^3.7.3"}
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^24.3"
tox = "^3.21.4"
isort = "^5.7.0"
pytest-httpserver = "^0.3.7"
pytest-asyncio = "^0.14.0"
pytest-spec = "^3.1.0"
pytest-cov = "^2.11.1"
Faker = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
profile = "black"

[tool.black]
line-length = 100
target-version = ['py38']  # todo py39
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
